--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li class="itens">Localização</li>
         <li class="itens">Profissionais qualificados</li>
     </ul>
-<img src="beneficios.jpg" class="imagen-beneficios>
+<img src="beneficios.jpg" class="imagen-beneficios">
 </div>
 </body>
 </html>
