--- a/index.html
+++ b/index.html
@@ -19,14 +19,19 @@
       <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</P>
 
 </div>
+
 <div class="beneficios">
+    <h2>Benefícios</h2>
+    
     <ul>
         <li class="itens">Atendimento aos clentes</li>
         <li class="itens">Espaço diferenciado</li>
         <li class="itens">Localização</li>
         <li class="itens">Profissionais qualificados</li>
     </ul>
-<img src="beneficios.jpg" class="imagen-beneficios">
-</div>
+    
+    <img src="beneficios.jpg" class="imagen-beneficios">
+  </div>
 </body>
+
 </html>
