--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h3 class="titulo-secundario">Benefícios</h3>
     
     <ul>
-        <li class="itens">Atendimento aos clentes</li>
+        <li class="itens">Atendimento aos clientes</li>
         <li class="itens">Espaço diferenciado</li>
         <li class="itens">Localização</li>
         <li class="itens">Profissionais qualificados</li>
