--- a/Produtos.html
+++ b/Produtos.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Produtos-Barbearia</title>
+    <link rel="stylesheet" href="produtos.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
