--- a/Produtos.html
+++ b/Produtos.html
@@ -7,7 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
-</body>
+    <body>
+        <header>
+            <h1><img src="logo.png"></h1>
+        <nav>
+            <ul>
+                <li><a href="index.html>Home</a></li>
+                <li>Produtos</li>
+                <li>Contato</li>
+            </ul>
+        </nav>
+        </header>
+    </body>
 </html>
