--- a/produtos.html
+++ b/produtos.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="index.html>Home</a></li>
-                <li>Produtos</li>
-                <li>Contato</li>
+                <li><a href="produtos.html">Produtos</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
         </header>
