--- a/produtos.html
+++ b/produtos.html
@@ -6,9 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="reset.css">
 </head>
     <body>
         <header>
+            <div class="caixa">
             <h1><img src="logo.png"></h1>
         <nav>
             <ul>
@@ -17,6 +19,7 @@
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
+            </div>
         </header>
     </body>
 </html>
