--- a/produtos.html
+++ b/produtos.html
@@ -21,5 +21,26 @@
         </nav>
             </div>
         </header>
+        <main>
+            <ul class="produrtos">
+                <li>
+                    <h2>Cabelo</h2>
+                    <img>
+                    <p class="produto-descricao">Tesoura ou Máquina</p>
+                    <p class="prduto-preco">R$ 25,00</p>
+                </li>
+                <li>
+                    <h3>Barba</h3>
+                    <img>
+                    <p class="produto-descricao">Navalha ou Máquina</p>
+                    <p class="produto-preco">R$ 20,00</p>
+                </li>
+                <li>
+                    <h4>Cabelo e Barba</h4>
+                    <p class="produto-descricao">Tesoura/Navalha, Tesoura/Máquina, Máquina/Navalha, Máquina/Máqui
+                    <p class="produto-preco">R$ 40,00</p>
+                </li>
+            </ul>
+        </main>
     </body>
 </html>
