--- a/produtos.html
+++ b/produtos.html
@@ -26,18 +26,18 @@
                 <li>
                     <h2>Cabelo</h2>
                     <img>
-                    <p class="produto-descricao">Tesoura ou Máquina</p>
+                    <p class="produto-descricao">Tesoura ou máquina, como o cliente preferir</p>
                     <p class="prduto-preco">R$ 25,00</p>
                 </li>
                 <li>
-                    <h3>Barba</h3>
+                    <h2>Barba</h2>
                     <img>
-                    <p class="produto-descricao">Navalha ou Máquina</p>
+                    <p class="produto-descricao">Corte e desenho profissional de barba</p>
                     <p class="produto-preco">R$ 20,00</p>
                 </li>
                 <li>
-                    <h4>Cabelo e Barba</h4>
-                    <p class="produto-descricao">Tesoura/Navalha, Tesoura/Máquina, Máquina/Navalha, Máquina/Máqui
+                    <h2>Cabelo e Barba</h2>
+                    <p class="produto-descricao">Pacote completo de cabelo e barba</p>
                     <p class="produto-preco">R$ 40,00</p>
                 </li>
             </ul>
