--- a/index.html
+++ b/index.html
@@ -44,5 +44,9 @@
 				</li>
 			</ul>
 		</main>
+		<footer>
+			<img src="logo-branco.png">
+			<p class="copyright">&copy; Kayla L.-2B 2024</p>
+		</footer>
 	</body>
 </html>
