--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 			</ul>
 		</main>
 		<footer>
-			<img src="logo-branco.png">
-			<p class="copyright">&copy; Kayla L.-2B 2024</p>
+		<img src="logo-branco.png">
+		<p class="copyright">&copy; Kayla L. - 2B 2024</p>
 		</footer>
 	</body>
 </html>
