--- a/contato.html
+++ b/contato.html
@@ -34,3 +34,9 @@
     <input type="submit" valul="Enviar Formulário>
   </form>
 </main>
+<footer>
+		<img src="logo-branco.png">
+		<p class="copyright">&copy; Kayla L. - 2B 2024</p>
+		</footer>
+	</body>
+</html>
