--- a/contatos.html
+++ b/contatos.html
@@ -31,7 +31,7 @@
     <label for="telefone">Telefone</label>
     <input type="text" id="telefone">
 
-    <input type="submit" valul="Enviar Formulário>
+    <input type="submit" valul="Enviar Formulário">
   </form>
 </main>
 <footer>
