--- a/contatos.html
+++ b/contatos.html
@@ -25,12 +25,14 @@
 <main>
   <form>
     <label for="nomesobrenome">Nome e Sobrenome</label>
-    <input type="text" id="nomesobrenome">
+    <input type="text" id="nomesobrenome" class="input-padrao">
     <label for="email">Email</label>
-    <input type="text" id="email">
+    <input type="text" id="email" class="input-padrao">
     <label for="telefone">Telefone</label>
-    <input type="text" id="telefone">
-    <input type="submit" valul="Enviar Formulário">
+    <input type="text" id="telefone" class="input-padrao">
+    <label="mensagem">Mensagem</label>
+    <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
+    <input type="submit" value="Enviar Formulário">
   </form>
 </main>
 <footer>
