--- a/contatos.html
+++ b/contatos.html
@@ -30,7 +30,7 @@
     <input type="text" id="email" class="input-padrao">
     <label for="telefone">Telefone</label>
     <input type="text" id="telefone" class="input-padrao">
-    <label="mensagem">Mensagem</label>
+    <label for="mensagem">Mensagem</label>
     <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
     <input type="submit" value="Enviar Formulário">
   </form>
