--- a/contatos.html
+++ b/contatos.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Produtos - Barbearia Alura</title>
+    <head>
+    <meta charset="UTF-8">
+    <title>Produtos - Barbearia Alura</title>
 
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="produtos.css">
@@ -21,23 +21,55 @@
 				</nav>
 			</div>
 		</header>
+                <main>
+                    <form>
+                        <label for="nomesobrenome">Nome e Sobrenome</label>
+                        <input type="text" id="nomesobrenome" class="input-padrao">
 
-<main>
-  <form>
-    <label for="nomesobrenome">Nome e Sobrenome</label>
-    <input type="text" id="nomesobrenome" class="input-padrao">
-    <label for="email">Email</label>
-    <input type="text" id="email" class="input-padrao">
-    <label for="telefone">Telefone</label>
-    <input type="text" id="telefone" class="input-padrao">
+                        <label for="email">Email</label>
+                        <input type="text" id="email" class="input-padrao">
+
+                        <label for="telefone">Telefone</label>
+                        <input type="text" id="telefone" class="input-padrao">
+
     <label for="mensagem">Mensagem</label>
     <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
-    <input type="submit" value="Enviar Formulário">
-  </form>
-</main>
-<footer>
-		<img src="logo-branco.png">
-		<p class="copyright">&copy; Kayla L. - 2B 2024</p>
+<div>
+    <p>Como prefere o nosso contato?</p>
+    <label for="radio-email">
+        <input type="radio" name="contato" value="email" id="radio-email">
+        Email
+    </label>
+
+    <label for="radio-telefone">
+        <input type="radio" name="contato" value="telefone" id="radio-telefone"> 
+        Telefone
+    </label>
+
+    <label for="radio-whatsapp">
+
+        <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">
+        WhatsApp
+    </label>
+</div>
+<div>
+    <p>Qual horário prefere ser atendido?</p>
+    <select>
+        <option>Manhã</option>
+        <option>Tarde</option>
+        <option>Noite</option>
+    </select>
+</div>
+<label class="checkbox">
+    <input type="checkbox">
+    Gostaria de receber nossas novidades por email?
+</label>
+                        <input type="submit" value="Enviar Formulário">
+                    </form>
+                </main>
+                <footer>
+		    <img src="logo-branco.png">
+		    <p class="copyright">&copy; Kayla L. - 2B 2024</p>
 		</footer>
 	</body>
 </html>
