--- a/contatos.html
+++ b/contatos.html
@@ -10,7 +10,7 @@
 	<body>
 		<header>
 			<div class="caixa">
-				<h1><img src="logo.png"></h1>
+				<h1><img src="logo.png" alt="Logo da Barbearia"></h1>
 
 				<nav>
 					<ul>
@@ -68,7 +68,7 @@
                     </form>
                 </main>
                 <footer>
-		    <img src="logo-branco.png">
+		    <img src="logo-branco.png" alt="Logo da Barbearia">
 		    <p class="copyright">&copy; Kayla L. - 2B 2024</p>
 		</footer>
 	</body>
