--- a/contatos.html
+++ b/contatos.html
@@ -34,7 +34,7 @@
 
     <label for="mensagem">Mensagem</label>
     <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
-<div>
+<fieldset>
     <p>Como prefere o nosso contato?</p>
     <label for="radio-email">
         <input type="radio" name="contato" value="email" id="radio-email">
@@ -51,20 +51,20 @@
         <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">
         WhatsApp
     </label>
-</div>
-<div>
+</fieldset>
+<fieldset>
     <p>Qual horário prefere ser atendido?</p>
     <select>
         <option>Manhã</option>
         <option>Tarde</option>
         <option>Noite</option>
     </select>
-</div>
+</fieldset>
 <label class="checkbox">
     <input type="checkbox">
     Gostaria de receber nossas novidades por email?
 </label>
-                        <input type="submit" value="Enviar Formulário">
+                        <input type="submit" value="Enviar Formulário" class="enviar">
                     </form>
                 </main>
                 <footer>
