--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 				</nav>
 		</div>
 	</header>
-	<img id="banner" src="banner.jpg">
-                 <div class="principal">
-                         <h2>Sobre a Barbearia Alura</h2>
-
+	<img class="banner" src="banner.jpg">
+	<main>
+                 <section class="principal">
+                         <h2 class="titulo-secundario">Sobre a Barbearia Alura</h2>
+                         <img class="utensilios" src="utensilios.jpg" alt='utensilios">
 
                          <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
@@ -34,7 +35,7 @@
 
                  </div>
 
-                 <div class="beneficios">
+                 <section class="beneficios">
                          <h3 class="titulo-secundario">Benefícios</h3>
 
                          <ul>
@@ -45,11 +46,12 @@
                          </ul>
 
                          <img src="beneficios.jpg" class="imagem-beneficios">
-                 </div>
+                 </section>
 	
 	<footer>
 		<img src="logo-branco.png">
 		<p class="copyright">&copy; Kayla L. - 2B 2024</p>
 	</footer>
+      </main>
     </body>
 </html>
